[package]
name = "bevy_badnet"
version = "0.1.0"
edition = "2024"

[features]
default = []
cbor = ["dep:ciborium"]

[dependencies]
bevy = "0.18.0"
bytes = "1.11.0"
ciborium = { version = "0.2.2", optional = true }
crossbeam-channel = "0.5.15"
getrandom = "0.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
xxhash-rust = { version = "0.8.15", features = ["const_xxh64"] }

[dependencies.mio]
version = "1.1.0"
features = ["os-poll", "net"]
